# closure-quotient-landscape

./: .gitignore  LICENSE  Makefile  README.md  RONE_SUBMISSION.md  closure_quotient_landscape.pdf.asc  closure_quotient_landscape.tex
cross_substrate_galois_pair/: README.md  q51_exact_phase_s_run.txt  q51_exact_vs_fidelity_run.txt
figures/: Q24_visualization.html  binary_ternary_layered.tex  hyperedge_styles_sample.tex  q102.tex  q181.tex  q48.tex  q84.tex  q90.tex
haskell/: .gitignore  README.md  cabal.project.freeze  cfs-kernel.cabal
haskell/src/CFS/: Cochain.hs  Multiway.hs  Topologies.hs
haskell/test/: Spec.hs
references/: Kn3_large_n_findings_v1.md  Kn3_pool_a_defect_findings_v1.md  README.md  closure_quotient_landscape_findings_v1.md  probe_pool_a_defect.py
scripts/: Kn3_extended_probe.py  Kn3_large_n_probe.py  Kn3_pentagonal_confirmation.py  Kn3_push_to_n20.py  composition_rule_probe.py  dump_quotient_to_tikz.py  prime_count_probe.py  probe_J_decomp_v1.py  probe_boundary_regulation_v1.py  probe_constraint_floor_v1.py  probe_identity_unique_v1.py  probe_q24_cyc6_composition_v1.py  probe_q45_q90_c_doubling_v1.py  probe_q84_doubly_terminal_v1.py  probe_scale_separation_v1.py  q181_canonical_seed.py  q181_search.py  q51_exact_phase_s_python.py  q51_exact_vs_fidelity_verification.py  reground_q_family.py  small_closure_landscape_scan.py  thread1_F_closure.py  thread2_J_fixed_check.py  visualize_Q24.py
